Booking-service-mvc/kubernetes/mvc-service.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mvc-service-brown
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mvc-service
        version: brown
    spec:
      containers:
      - name: mvc-service
        image: mvc-service:brown
        imagePullPolicy: Never
        ports:
        - containerPort: 80
