Booking-service-mvc/kubernetes/mvc-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mvc-service-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mvc-service
spec:
  host: mvc-service
  subsets:
  - name: brown
    labels:
      version: brown
  - name: blue
    labels:
      version: blue
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mvc-service
spec:
  hosts:
  - "*"
  gateways:
  - mvc-service-gateway
  http:     
  - route:
    - destination:
        host: mvc-service        
        subset: brown
        port:
          number: 9080
      weight: 50 
    - destination:
        host: mvc-service
        subset: blue
        port:
          number: 9080
      weight: 50         
    retries:
      attempts: 3         
      perTryTimeout: 5s
